# study

./: .dockerignore  .env  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  LibraryDocGenerator.spec.ts  LibraryExampleStudyGenerator.spec.ts  PARTICIPANT_FEEDBACK_VALIDATION_DESIGN.md  README.md  RESPONSE_ONE_FORM_ARCHITECTURE_PLAN.md  RESPONSE_VALIDATION_FOLLOWUP_PLAN.md  bar.html  bubble.html  claude.md  eslint.config.js  firebase.json  generateStudyConfig.cjs  global.json  index.html  libraryDocGenerator.cjs  libraryDocGenerator.spec.ts  libraryExampleStudyGenerator.cjs  libraryExampleStudyGenerator.spec.ts  nginx-docker.conf  package-lock.json  package.json  pie.html  playwright.config.ts  revisit-nginx.conf  tsconfig.json  typedoc.json  typedocReadMe.md  vite.config.ts  vite.config.ts.timestamp-1681448913394.mjs  zzztest.ipynb
.github/: doc-coverage.md
.ipynb_checkpoints/: zzztest-checkpoint.ipynb
741/: 404.html  index.html
PR1000/: index.html
PR1001/: index.html
PR1002/: index.html
PR1003/: index.html
PR1005/: index.html
PR1010/: index.html
PR1011/: index.html
PR1013/: index.html
PR1014/: index.html
PR1016/: index.html
PR1017/: global.json  index.html
PR1018/: index.html
PR1019/: index.html
PR1021/: index.html
PR1023/: index.html
PR1025/: index.html
data/: .gitignore  README.md  clean_data.csv  data.json  pyproject.toml
data/common/: constants.py  plotting.py  utils.py
data/scripts/: data_analysis.py  generate_data.py  preprocess.py  test_series_correctness.py
(+3776 files in other folders)
